# labeling_bot

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: build_docker.yml
labeler/: interfaces.py
labeler/adapter/: telegram_bot.py
labeler/app/: labeler.py
labeler/domain/: objects.py
labeler/infra/: renderer.py
labeler/infra/e550w_printer/: media_definitions.py  printer.py
tests/: fixtures.py
tests/labeler/domain/: test_objects.py
tests/labeler/infra/: test_renderer.py
