[tool.poetry]
name = "python-scratchpad"
version = "0.1.0"
description = ""
authors = ["Hubert Bryłkowski <hubert@brylkowski.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
brother-ql = {git = "https://github.com/archetipo/brother_ql"}
jinja2 = "^3.1.2"
pillow = "^9.5.0"
pysnmp = "^4.4.12"
pyasn1 = "0.4.8"
python-telegram-bot = "^20.3"
fastapi = "^0.99.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
